- Added better navigation system - Added first diagram
Signed-off-by: Josua Frank <jo391fra@htwg-konstanz.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="title_about">About</string>
     <string name="Open">Open</string>
     <string name="Close">Close</string>
-    <string name="logo_content_description">logo</string>
+    <string name="temperature">Temperature</string>
 </resources>
