--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,9 @@
     <string name="light">Light</string>
     <string name="humidity">Humidity</string>
     <string name="noise">Noise</string>
-    <string name="title_activity_settings">Settings</string>
 
     <string name="channel_name">sensor_alarms</string>
     <string name="channel_description">This notifications are telling you about abnormal sensor values like a too high temperature or a too low humidity.</string>
+    <string name="text_about">This project was part of the course \"Mobile Computing\" of the HTWG Constance. It was made by Patrick Kempf and Josua Frank</string>
 
 </resources>
