--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="one_week">1 Week</string>
     <string name="one_month">1 Month</string>
     <string name="one_year">1 Year</string>
+    <string name="room_climate">room climate</string>
 
 
 </resources>
